fix layout del main, fix varios overflows, fix responsiveness

--- a/website/assets/generic-style.css
+++ b/website/assets/generic-style.css
@@ -264,6 +264,7 @@ body {
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
+  gap: 1em;
   height: 100vh;
 
   background-color: var(--columbia-blue);
@@ -302,7 +303,6 @@ aside.ofertas-weekend {
   width: 100%;
 }
 
-
 main {
   display: flex;
   flex-flow: column wrap;
@@ -327,9 +327,10 @@ main {
       }
     }
 
-    article.producto {
-      padding: 1em 0;
-      text-align: center;
+    div.productos {
+      display: flex;
+      flex-flow: column wrap;
+      gap: 0.75em;
     }
 
     article#imagen {
@@ -337,6 +338,15 @@ main {
       background-image: url(../img/stock/snowy-montainious-valley.jpg);
       background-size: cover;
       background-repeat: no-repeat;
+    }
+
+    article.producto {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      padding: 1em 0;
+      text-align: center;
     }
   }
 }
@@ -361,6 +371,7 @@ footer {
   }
 
   .copyright {
+    padding: 0 1em 1em;
     padding-bottom: 1em;
   }
 }
@@ -382,32 +393,22 @@ footer {
   }
 
   main {
-
     section {
-      /* display: flex; */
-      flex-flow: row wrap;
       justify-content: space-between;
-      gap: 0 0.75em;
 
-      article {
-        width: 32%;
-        font-size: 1em;
-      }
+      div.productos {
+        flex-flow: row wrap;
+        justify-content: space-between;
+        gap: 0 0.75em;
 
-      article.producto {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        /* font-size: 1.75em; */
+        article.producto {
+          width: 31%;
 
-        a {
-          font-size: 1.75em;
-          line-height: 2;
+          a {
+            font-size: 1.25em;
+            line-height: 2;
+          }
         }
-      }
-
-      article#imagen {
-        width: 100%;
       }
     }
   }
